# phosphor-fan-presence

./: .clang-format  .gitignore  MAINTAINERS  Makefile.am  Makefile.generated.in  OWNERS  README.md  argument.hpp  bootstrap.sh  configure.ac  dbus_paths.hpp  elog-errors.hpp  event.hpp  fan-detect-defs.hpp  fan-enclosure.cpp  fan-enclosure.hpp  fan_detect_defs.hpp  fan_enclosure.cpp  fan_enclosure.hpp  fan_presence_by_tach.cpp  fan_presence_interface.cpp  fan_presence_interface.hpp  fan_properties.hpp  gen-fan-detect-defs.py  gen_config_files.sh  generate.sh  groups  hwmon_ffdc.cpp  hwmon_ffdc.hpp  interfaces.cpp  interfaces.hpp  json_config.hpp  logger.hpp  meson.build  meson.options  meson_options.txt  power_state.hpp  project.config  sdbusplus.hpp  sdevent.hpp  (+20 more)
chassis-cooling-type/: Makefile.am  argument.cpp  argument.hpp  cooling_type.cpp  cooling_type.hpp  main.cpp  phosphor-cooling-type
control/: Makefile.am  README.md  README.txt  actions.cpp  actions.hpp  argument.cpp  conditions.hpp  fan.cpp  fan.hpp  fan_zone_defs.cpp  fan_zone_defs_test.cpp  fanctl.cpp  functor.hpp  gen-fan-zone-defs.py  generated.cpp  handlers.hpp  json_parser.cpp  json_parser.hpp  main.cpp  manager.cpp  manager.hpp  matches.cpp  matches.hpp  meson.build  preconditions.cpp  preconditions.hpp  triggers.cpp  triggers.hpp  types.hpp  utility.cpp  utility.hpp  zone.cpp  zone.hpp
control/example/: events.yaml  fans.yaml  set_speed_events.yaml  zone_conditions.yaml  zones.yaml
control/json/: Makefile.am  config_attr.hpp  config_base.hpp  dbus_zone.cpp  dbus_zone.hpp  event.cpp  event.hpp  fan.cpp  fan.hpp  group.cpp  group.hpp  manager.cpp  manager.hpp  profile.cpp  profile.hpp  profiles.cpp  profiles.hpp  zone.cpp  zone.hpp
control/json/actions/: action.hpp  common_pcie_cards.json  count_state_floor.cpp  count_state_floor.hpp  count_state_speed.cpp  count_state_speed.hpp  count_state_target.cpp  count_state_target.hpp  default_floor.cpp  default_floor.hpp  failure_target_override.cpp  failure_target_override.hpp  get_managed_objects.cpp  get_managed_objects.hpp  mapped_floor.cpp  mapped_floor.hpp  missing_owner_speed.cpp  missing_owner_speed.hpp  missing_owner_target.cpp  missing_owner_target.hpp  modifier.cpp  modifier.hpp  net_speed_decrease.cpp  net_speed_decrease.hpp  net_speed_increase.cpp  net_speed_increase.hpp  net_target_decrease.cpp  net_target_decrease.hpp  net_target_increase.cpp  net_target_increase.hpp  override_fan_target.cpp  override_fan_target.hpp  pcie_card_cooling.cpp  pcie_card_cooling.hpp  pcie_card_events.json  pcie_card_floors.cpp  pcie_card_floors.hpp  pcie_card_metadata.cpp  pcie_card_metadata.hpp  request_speed_base.cpp  (+13 more)
control/json/test/: Makefile.am  profile_test.cpp
control/json/triggers/: handlers.hpp  init.cpp  init.hpp  parameter.cpp  parameter.hpp  signal.cpp  signal.hpp  timer.cpp  timer.hpp  trigger.hpp  trigger_aliases.hpp
control/json/utils/: flight_recorder.cpp  flight_recorder.hpp  modifier.cpp  modifier.hpp  pcie_card_metadata.cpp  pcie_card_metadata.hpp  table_hysteresis.hpp
control/service_files/json/: phosphor-fan-control@.service  phosphor-fan-control@.service.in
control/service_files/yaml/: phosphor-fan-control-init@.service  phosphor-fan-control-init@.service.in  phosphor-fan-control@.service  (+1 more)
control/templates/: defs.mako  fan_zone_defs.mako.cpp
cooling-type/: Makefile.am  argument.cpp  argument.hpp  cooling_type.cpp  cooling_type.hpp  main.cpp  meson.build
evdevpp/test/: Makefile.am  evmon.cpp
monitor/: Makefile.am  README.md  argument.cpp  chassis.cpp  chassis.hpp  conditions.cpp  conditions.hpp  fan.cpp  fan.hpp  fan_defs.hpp  fan_error.cpp  fan_error.hpp  fan_monitor_defs_test.cpp  gen-fan-monitor-defs.py  generated.cpp  groups.hpp  json.md  json_parser.cpp  json_parser.hpp  logging.cpp  logging.hpp  main.cpp  malfunction_monitor.cpp  malfunction_monitor.hpp  meson.build  multichassis_json_parser.cpp  multichassis_json_parser.hpp  multichassis_system.cpp  multichassis_system.hpp  multichassis_types.hpp  nonzero_speed_trust.hpp  power_interface.cpp  power_interface.hpp  power_off_action.hpp  power_off_cause.hpp  power_off_rule.hpp  system.cpp  system.hpp  tach_sensor.cpp  tach_sensor.hpp  (+6 more)
monitor/example/: config.json  monitor.yaml
monitor/test/: Makefile.am  chassis_test.cpp  meson.build  mock_power_interface.hpp  multi_chassis_json_parser_test.cpp  multi_chassis_system_test.cpp  power_off_cause_test.cpp  power_off_rule_test.cpp  zone_test.cpp
presence/: Makefile.am  Makefile.config_files.in  anyof.cpp  anyof.hpp  eeprom_device.hpp  error_reporter.cpp  error_reporter.hpp  fallback.cpp  fallback.hpp  fan.cpp  fan.hpp  fan_enclosure.cpp  fan_enclosure.hpp  fan_properties.hpp  gen-fan-detect-defs.py  get_power_state.cpp  get_power_state.hpp  gpio.cpp  gpio.hpp  json_config.cpp  json_config.hpp  json_parser.cpp  json_parser.hpp  logging.cpp  logging.hpp  meson.build  pfpgen.py  psensor.hpp  rpolicy.hpp  sensor_base.hpp  tach.cpp  tach.hpp  tach_detect.cpp  tach_sensor.cpp  tach_sensor.hpp
presence/example/: config.json  example.json  example.yaml  fan-detect.yaml
presence/templates/: anyof.hpp.mako  fallback.hpp.mako  generated.hpp.mako  generated.mako.hpp  gpio.hpp.mako  gpio.mako.hpp  tach.hpp.mako
presence/test/: Makefile.am  fallbacktest.cpp  meson.build
sdevent/test/: .gitignore  Makefile.am  iotest.cpp
sensor-monitor/: Makefile.am  README.md  alarm_checker.cpp  alarm_checker.hpp  alarm_handlers.cpp  alarm_handlers.hpp  alarm_timestamps.hpp  dbus_alarm_monitor.cpp  dbus_alarm_monitor.hpp  domain_event_publisher.hpp  domain_events.hpp  main.cpp  meson.build  shutdown_alarm_monitor.cpp  shutdown_alarm_monitor.hpp  threshold_alarm_logger.cpp  threshold_alarm_logger.hpp  types.hpp
sensor-monitor/domain_event_subscribers/: domain_event_subscriber.hpp  recovery_subscriber.cpp  recovery_subscriber.hpp
sensor-monitor/schemas/: recovery-action-sample.json  recovery-action.json
sensor-monitor/service_files/: sensor-monitor.service
test/: .gitignore  Makefile.am  logger_test.cpp  meson.build  timertest.cpp
(+123 files in other folders)
